add project_credentials
